lab2/code/syntax.output
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error
    9       | Specifier error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec
   28        | ParamDec error

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | LC error RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | RETURN Exp error
   42     | Exp error
   43     | IF LP error RP Stmt
   44     | IF LP error RP Stmt ELSE Stmt
   45     | WHILE LP error RP Stmt

   46 DefList: Def DefList
   47        | %empty

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI
   50    | Specifier DecList error

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | ASSIGNOP error
   74    | AND error
   75    | OR error
   76    | RELOP error
   77    | PLUS error
   78    | MINUS error
   79    | STAR error
   80    | DIV error
   81    | NOT error
   82    | ID LP error RP
   83    | LP error RP
   84    | Exp LB error RB

   85 Args: Exp COMMA Args
   86     | Exp
   87     | Exp error


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 22 25 28 31 40 41 42 43 44 45 49 50 73 74 75 76 77 78 79 80 81 82 83 84 87
    INT <node> (258) 21 71
    FLOAT <node> (259) 72
    ID <node> (260) 17 19 20 23 24 66 67 69 70 82
    SEMI <node> (261) 4 5 7 9 34 36 40 48 49
    COMMA <node> (262) 11 26 52 85
    ASSIGNOP <node> (263) 54 55 73
    RELOP <node> (264) 58 76
    PLUS <node> (265) 59 77
    MINUS <node> (266) 60 64 78
    STAR <node> (267) 61 79
    DIV <node> (268) 62 80
    AND <node> (269) 56 74
    OR <node> (270) 57 75
    DOT <node> (271) 69
    NOT <node> (272) 65 81
    TYPE <node> (273) 13
    LP <node> (274) 23 24 25 37 38 39 43 44 45 63 66 67 82 83
    RP <node> (275) 23 24 25 37 38 39 43 44 45 63 66 67 82 83
    LB <node> (276) 21 22 68 84
    RB <node> (277) 21 22 68 84
    LC <node> (278) 15 30 31
    RC <node> (279) 15 30 31
    STRUCT <node> (280) 15 16
    RETURN <node> (281) 36 41
    IF <node> (282) 37 38 43 44
    ELSE <node> (283) 38 44
    WHILE <node> (284) 39 45
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <node> (35)
        on left: 10 11 12
        on right: 4 11 12
    Specifier <node> (36)
        on left: 13 14
        on right: 4 5 6 8 9 29 48 49 50
    StructSpecifier <node> (37)
        on left: 15 16
        on right: 14
    OptTag <node> (38)
        on left: 17 18
        on right: 15
    Tag <node> (39)
        on left: 19
        on right: 16
    VarDec <node> (40)
        on left: 20 21 22
        on right: 10 11 12 21 22 29 53 54
    FunDec <node> (41)
        on left: 23 24 25
        on right: 6
    VarList <node> (42)
        on left: 26 27 28
        on right: 23 26
    ParamDec <node> (43)
        on left: 29
        on right: 26 27 28
    CompSt <node> (44)
        on left: 30 31
        on right: 6 35
    StmtList <node> (45)
        on left: 32 33
        on right: 30 32
    Stmt <node> (46)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 32 37 38 39 43 44 45
    DefList <node> (47)
        on left: 46 47
        on right: 15 30 46
    Def <node> (48)
        on left: 48 49 50
        on right: 46
    DecList <node> (49)
        on left: 51 52
        on right: 48 50 52
    Dec <node> (50)
        on left: 53 54
        on right: 51 52
    Exp <node> (51)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
        on right: 34 36 37 38 39 41 42 54 55 56 57 58 59 60 61 62 63 64 65 68 69 84 85 86 87
    Args <node> (52)
        on left: 85 86 87
        on right: 66 85


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT . OptTag LC DefList RC
   16                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error
    9       | Specifier . error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17
    LP     shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   15 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 12

   16 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error .
    9       | Specifier error . SEMI

    SEMI  shift, and go to state 23

    $default  reduce using rule 8 (ExtDef)


State 16

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 20 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

   25 FunDec: LP . error RP

    error  shift, and go to state 25


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    error  shift, and go to state 27
    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    SEMI  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 30

    CompSt  go to state 31


State 22

   15 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 23

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 24

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 25

   25 FunDec: LP error . RP

    RP  shift, and go to state 39


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   12 ExtDecList: VarDec error . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 20


State 28

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 42
    VarDec      go to state 20


State 29

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 43
    INT    shift, and go to state 44


State 30

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error RC

    error   shift, and go to state 45
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error     [reduce using rule 47 (DefList)]
    INT       reduce using rule 47 (DefList)
    FLOAT     reduce using rule 47 (DefList)
    ID        reduce using rule 47 (DefList)
    ASSIGNOP  reduce using rule 47 (DefList)
    RELOP     reduce using rule 47 (DefList)
    PLUS      reduce using rule 47 (DefList)
    MINUS     reduce using rule 47 (DefList)
    STAR      reduce using rule 47 (DefList)
    DIV       reduce using rule 47 (DefList)
    AND       reduce using rule 47 (DefList)
    OR        reduce using rule 47 (DefList)
    NOT       reduce using rule 47 (DefList)
    LP        reduce using rule 47 (DefList)
    LC        reduce using rule 47 (DefList)
    RC        reduce using rule 47 (DefList)
    RETURN    reduce using rule 47 (DefList)
    IF        reduce using rule 47 (DefList)
    WHILE     reduce using rule 47 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 34


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   48 Def: Specifier . DecList SEMI
   49    | Specifier . error SEMI
   50    | Specifier . DecList error

    error  shift, and go to state 47
    ID     shift, and go to state 40

    VarDec   go to state 48
    DecList  go to state 49
    Dec      go to state 50


State 33

   15 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 34

   46 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 52
    Def              go to state 34


State 35

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 36

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 53


State 37

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 38

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .
   28        | ParamDec . error

    error  shift, and go to state 55
    COMMA  shift, and go to state 56

    RP  reduce using rule 27 (VarList)


State 39

   25 FunDec: LP error RP .

    $default  reduce using rule 25 (FunDec)


State 40

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 41

   12 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 42

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 43

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 57


State 44

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 45

   31 CompSt: LC error . RC

    RC  shift, and go to state 59


State 46

   30 CompSt: LC DefList . StmtList RC

    error     shift, and go to state 60
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 64
    RELOP     shift, and go to state 65
    PLUS      shift, and go to state 66
    MINUS     shift, and go to state 67
    STAR      shift, and go to state 68
    DIV       shift, and go to state 69
    AND       shift, and go to state 70
    OR        shift, and go to state 71
    NOT       shift, and go to state 72
    LP        shift, and go to state 73
    LC        shift, and go to state 30
    RETURN    shift, and go to state 74
    IF        shift, and go to state 75
    WHILE     shift, and go to state 76

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 78
    Stmt      go to state 79
    Exp       go to state 80


State 47

   49 Def: Specifier error . SEMI

    SEMI  shift, and go to state 81


State 48

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   53 Dec: VarDec .
   54    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 82
    LB        shift, and go to state 29

    $default  reduce using rule 53 (Dec)


State 49

   48 Def: Specifier DecList . SEMI
   50    | Specifier DecList . error

    error  shift, and go to state 83
    SEMI   shift, and go to state 84


State 50

   51 DecList: Dec .
   52        | Dec . COMMA DecList

    COMMA  shift, and go to state 85

    $default  reduce using rule 51 (DecList)


State 51

   15 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 15 (StructSpecifier)


State 52

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 53

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 29 (ParamDec)


State 54

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 55

   28 VarList: ParamDec error .

    $default  reduce using rule 28 (VarList)


State 56

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 86
    ParamDec         go to state 38


State 57

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 58

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 59

   31 CompSt: LC error RC .

    $default  reduce using rule 31 (CompSt)


State 60

   40 Stmt: error . SEMI

    SEMI  shift, and go to state 87


State 61

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 62

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 63

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .
   82    | ID . LP error RP

    LP  shift, and go to state 88

    $default  reduce using rule 70 (Exp)


State 64

   73 Exp: ASSIGNOP . error

    error  shift, and go to state 89


State 65

   76 Exp: RELOP . error

    error  shift, and go to state 90


State 66

   77 Exp: PLUS . error

    error  shift, and go to state 91


State 67

   64 Exp: MINUS . Exp
   78    | MINUS . error

    error     shift, and go to state 92
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 64
    RELOP     shift, and go to state 65
    PLUS      shift, and go to state 66
    MINUS     shift, and go to state 67
    STAR      shift, and go to state 68
    DIV       shift, and go to state 69
    AND       shift, and go to state 70
    OR        shift, and go to state 71
    NOT       shift, and go to state 72
    LP        shift, and go to state 73

    Exp  go to state 93


State 68

   79 Exp: STAR . error

    error  shift, and go to state 94


State 69

   80 Exp: DIV . error

    error  shift, and go to state 95


State 70

   74 Exp: AND . error

    error  shift, and go to state 96


State 71

   75 Exp: OR . error

    error  shift, and go to state 97


State 72

   65 Exp: NOT . Exp
   81    | NOT . error

    error     shift, and go to state 98
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 64
    RELOP     shift, and go to state 65
    PLUS      shift, and go to state 66
    MINUS     shift, and go to state 67
    STAR      shift, and go to state 68
    DIV       shift, and go to state 69
    AND       shift, and go to state 70
    OR        shift, and go to state 71
    NOT       shift, and go to state 72
    LP        shift, and go to state 73

    Exp  go to state 99


State 73

   63 Exp: LP . Exp RP
   83    | LP . error RP

    error     shift, and go to state 100
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 64
    RELOP     shift, and go to state 65
    PLUS      shift, and go to state 66
    MINUS     shift, and go to state 67
    STAR      shift, and go to state 68
    DIV       shift, and go to state 69
    AND       shift, and go to state 70
    OR        shift, and go to state 71
    NOT       shift, and go to state 72
    LP        shift, and go to state 73

    Exp  go to state 101


State 74

   36 Stmt: RETURN . Exp SEMI
   41     | RETURN . Exp error

    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 64
    RELOP     shift, and go to state 65
    PLUS      shift, and go to state 66
    MINUS     shift, and go to state 67
    STAR      shift, and go to state 68
    DIV       shift, and go to state 69
    AND       shift, and go to state 70
    OR        shift, and go to state 71
    NOT       shift, and go to state 72
    LP        shift, and go to state 73

    Exp  go to state 102


State 75

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   43     | IF . LP error RP Stmt
   44     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 103


State 76

   39 Stmt: WHILE . LP Exp RP Stmt
   45     | WHILE . LP error RP Stmt

    LP  shift, and go to state 104


State 77

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 78

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 105


State 79

   32 StmtList: Stmt . StmtList

    error     shift, and go to state 60
    INT       shift, and go to state 61
    FLOAT     shift, and go to state 62
    ID        shift, and go to state 63
    ASSIGNOP  shift, and go to state 64
    RELOP     shift, and go to state 65
    PLUS      shift, and go to state 66
    MINUS     shift, and go to state 67
    STAR      shift, and go to state 68
    DIV       shift, and go to state 69
    AND       shift, and go to state 70
    OR        shift, and go to state 71
    NOT       shift, and go to state 72
    LP        shift, and go to state 73
    LC        shift, and go to state 30
    RETURN    shift, and go to state 74
    IF        shift, and go to state 75
    WHILE     shift, and go to state 76

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 77
    StmtList  go to state 106
    Stmt      go to state 79
    Exp       go to state 80


State 80
